--- a/Vitol.Enzo.CRM.API/appsettings.json
+++ b/Vitol.Enzo.CRM.API/appsettings.json
@@ -40,10 +40,10 @@
   },
   "Opportunity": {
   
-    "smsT1": "Randevunu kaçırdın ! Yeni bir randevuyla ödemeniz anında hesabınızda ! -VavaCars Petrol Ofisi işbirliği ile 150 TL akaryakıt hediye! SMS almak istemiyorsanız 'STOP' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
-    "smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile. SMS almak istemiyorsanız 'STOP' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun. Unsubscribe text ‘STOP’ to +447588706759  Mersis:0924079386900001",
-    "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın. SMS almak istemiyorsanız ''STOP'' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
+    "smsT1": "Randevunu kaçırdın !\nYeni bir randevuyla ödemeniz anında hesabınızda ! -VavaCars Petrol Ofisi işbirliği ile 150 TL akaryakıt hediye!\nSMS almak istemiyorsanız 'STOP' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Aracını hala nakite çevirmeyi ister misin ?\nAracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'STOP' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nUnsubscribe text ‘STOP’ to +447588706759  Mersis:0924079386900001",
+    "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız ''STOP'' yazıp +447588706759'a iletebilirsiniz. Mersis:0924079386900001",
     "templateT1": "Test Template",
     "templateT2": "Test Template",
     "templateT3": "Test Template",
