--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -14,7 +14,7 @@
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderId": "26EB61ED-EDAE-E911-A82B-000D3AB18807",
     "liveDate": "2019-07-01",
-    "timeZoneStr": "Turkey Standard Time",
+    "timeZoneStr": "Pakistan Standard Time",
     "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net"
 
     /*
@@ -23,7 +23,9 @@
     "resource": "https://vavacarslive.crm4.dynamics.com/",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderId": "40b1136e-a7ac-e911-a83f-000d3ab18b89"
-
+    "liveDate": "2019-07-01",
+    "timeZoneStr": "Turkey Standard Time",
+    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net"
      */
 
   },
