Read appointment status from config

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -15,18 +15,35 @@
     "emailSenderId": "26EB61ED-EDAE-E911-A82B-000D3AB18807",
     "liveDate": "2019-07-01",
     "timeZoneStr": "Pakistan Standard Time",
-    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net"
+    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net",
+    "appointmentStatusCancelled": "CANCELLED",
+    "appointmentStatusAssigned": "ASSIGNED",
+    "inspectionStatusCancelled": "Inspection Cancelled",
+    "inspectionStatusAgreementNotSigned": "Agreement Not Signed",
+    "vehiclePurchaseStatusPurchased": "Purchased",
+    "vehiclePurchaseStatusAuctionCreated": "Auction Created",
+    "vehiclePurchaseStatusInTransit": "In Transit"
+
 
     /*
     "clientId": "56aa6ca6-77d3-4d91-8577-1ab124484037",
     "clientSecret": "QCAA4T:3aoRSCeIiCIpCVHEc9]rfV4+.",
     "resource": "https://vavacarslive.crm4.dynamics.com/",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
-    "emailSenderId": "40b1136e-a7ac-e911-a83f-000d3ab18b89"
+    "emailSenderId": "553FEC69-A7AC-E911-A824-000D3A289FCD",
     "liveDate": "2019-07-01",
     "timeZoneStr": "Turkey Standard Time",
-    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net"
-     */
+    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net",
+    "appointmentStatusCancelled": "Cancelled",
+    "appointmentStatusAssigned": "Assigned",
+    "inspectionStatusCancelled": "Inspection Cancelled",
+    "inspectionStatusAgreementNotSigned": "Agreement Not Signed",
+    "vehiclePurchaseStatusPurchased": "Purchased",
+    "vehiclePurchaseStatusAuctionCreated": "Auction Created",
+    "vehiclePurchaseStatusInTransit": "In Transit"
+    */
+
+
 
   },
 
