Updated basedURLs for Sandbox & Production Environments

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -15,7 +15,7 @@
     "emailSenderId": "26EB61ED-EDAE-E911-A82B-000D3AB18807",
     "liveDate": "2019-07-01",
     "timeZoneStr": "Pakistan Standard Time",
-    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net",
+    "baseUrl": "https://vavacarsengagementuatturkey.azurewebsites.net",
     "appointmentStatusCancelled": "CANCELLED",
     "appointmentStatusAssigned": "ASSIGNED",
     "inspectionStatusCancelled": "Inspection Cancelled",
@@ -33,7 +33,7 @@
     "emailSenderId": "553FEC69-A7AC-E911-A824-000D3A289FCD",
     "liveDate": "2019-07-01",
     "timeZoneStr": "Turkey Standard Time",
-    "baseUrl": "https://vavacarsemailcampaignuatturkey.azurewebsites.net",
+    "baseUrl": "https://vavacarsengagement.azurewebsites.net",
     "appointmentStatusCancelled": "Cancelled",
     "appointmentStatusAssigned": "Assigned",
     "inspectionStatusCancelled": "Inspection Cancelled",
