Exception handling in SMS

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -86,5 +86,7 @@
     "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
     "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA=="
   },
-  "SmartMessageAPI": "https://api.smartmessage-engage.com/SENDSMS"
+
+  "SmartMessageAPI": "https://api.smartmessage-engage.com/SENDSMS",
+  "ERRORSMS": "<SENDSMSRSP><RTCD>0</RTCD><EXP>{Exception}></EXP><TOTALCOUNT>1</TOTALCOUNT><SUCCESSCOUNT>0</SUCCESSCOUNT><FAILEDCOUNT>1</FAILEDCOUNT></SENDSMSRSP>"
 }
