SecretKey Enabling on SMS Utility

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -84,7 +84,8 @@
   "Keys": {
     "EncryptionkeyLead": "VHJpZ2dlclNlcnZpY2VBcGlMZWFk",
     "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
-    "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA=="
+    "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA==",
+    "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw=="
   },
 
   "SmartMessageAPI": "https://api.smartmessage-engage.com/SENDSMS",
