Changing of Smart message api link

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -88,6 +88,6 @@
     "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw=="
   },
 
-  "SmartMessageAPI": "https://api.smartmessage-engage.com/SENDSMS",
+  "SmartMessageAPI": "https://api2.smartmessage-engage.com/SENDSMS",
   "ERRORSMS": "<SENDSMSRSP><RTCD>0</RTCD><EXP>{Exception}></EXP><TOTALCOUNT>1</TOTALCOUNT><SUCCESSCOUNT>0</SUCCESSCOUNT><FAILEDCOUNT>1</FAILEDCOUNT></SENDSMSRSP>"
 }
