--- a/source/Vitol.Enzo.CRM.API.TriggerService/Vitol.Enzo.CRM.API.TriggerService.csproj
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/Vitol.Enzo.CRM.API.TriggerService.csproj
@@ -36,5 +36,7 @@
     </Content>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="http://json.schemastore.org/bower" /></VisualStudio></ProjectExtensions>
+
 </Project>
 
