--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -48,13 +48,12 @@
 
 
   },
-
   "Lead": {
-    "smsT2": "Merhaba {contactname}, {make}{model} aracınızın {valuation} değerlemesinin geçerlilik süresine 4 gün kaldı\n {make} {model} aracınız için değerlememiz.\n SMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın?\nÖdemeniz anında hesabınıza yapılacaktır.\n SMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Merhaba {contactname}, zaman daralıyor \nRandevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "Aracın için yeni bir değerleme alabilirsin.\nUzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT6": "Aracını satmayı denemekten bunaldın mı?\n Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Merhaba {contactname}, {make} {model} aracınızın {valuation} TL değerlemesinin geçerlilik süresine 4 gün kaldı.{make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın? Ödemeniz anında hesabınıza yapılacaktır.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT5": "Aracın için yeni bir değerleme alabilirsin.Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "templateT2": "Lead Real Time Trigger2",
     "templateT3": "Lead Real Time Trigger3",
     "templateT4": "Lead Real Time Trigger4",
@@ -63,10 +62,10 @@
   },
   "Opportunity": {
 
-    "smsT1": "Randevunu kaçırdın !\nYeni bir randevuyla ödemeniz anında hesabınızda ! -\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT2": "Aracını hala nakite çevirmeyi ister misin ?\nAracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Aracın için yeni bir değerleme alabilirsin. \nUzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Aracını satmayı denemekten bunaldın mı?\nRahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT1": "Randevunu kaçırdın ! Yeni bir randevuyla ödemeniz anında hesabınızda ! -\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Aracın için yeni bir değerleme alabilirsin.Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Real Time Trigger2",
     "templateT3": "Opportunity Real Time Trigger3",
@@ -74,9 +73,9 @@
 
   },
   "Prospect": {
-    "smsT1": "Yüzdün yüzdün kuyruğuna geldin.\nAracınıza verdiğimiz teklif için son gün! Yarın gelin bir kahve içelim ve aracını zahmetsizce satın alalım.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT2": "5 gün oldu, özledik\nHem özlem giderelim, hem kahve eşliğinde aracını alalım ve anında ödemeni yapalım.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Kilometren git gide artıyor olmalı...\nSattığını umuyoruz ama satmadıysan da biz alırız.\nSMS almak istemiyorsanız 'RED VAVA'' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT1": "Yüzdün yüzdün kuyruğuna geldin.Aracınıza verdiğimiz teklif için son gün! Yarın gelin bir kahve içelim ve aracını zahmetsizce satın alalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "5 gün oldu, özledik Hem özlem giderelim, hem kahve eşliğinde aracını alalım ve anında ödemeni yapalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Kilometren git gide artıyor olmalı...Sattığını umuyoruz ama satmadıysan da biz alırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "templateT1": "Prospect Real Time Trigger1",
     "templateT2": "Prospect Real Time Trigger2",
     "templateT3": "Prospect Real Time Trigger3"
