Adding of New Functionality For Pakistan Lead Triggers

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -54,60 +54,64 @@
     "clientSecret": "_2IA8un49xmBTF-F?v]JJ8kG6sa2H:6-",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderIdPK": "26EB61ED-EDAE-E911-A82B-000D3AB18807",
-    "liveDatePK": "2019-11-07",
+    "liveDatePK": "2019-11-05",
     "timeZonePK": "Pakistan Standard Time"
   },
 
 
-    "Lead": {
-      "smsT2": "Merhaba {contactname}, {make} {model} aracınızın {valuation} TL değerlemesinin geçerlilik süresine 4 gün kaldı. {make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın? Ödemeniz anında hesabınıza yapılacaktır.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT5": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "templateT2": "Lead Real Time Trigger2",
-      "templateT3": "Lead Real Time Trigger3",
-      "templateT4": "Lead Real Time Trigger4",
-      "templateT5": "Lead Real Time Trigger5",
-      "templateT6": "Lead Real Time Trigger6",
-      "smsT2PK": "Hey {contactname}, 4 days left on your valuation of {valuation} PK for your {make}{model}. Our valuation for your {make} {model}.\nTBD",
-      "smsT3PK": "Hey {contactname}, how will you spend {valuation}? Money in your account in 3 working hours.\nTBD",
-      "smsT4PK": "Hey {contactname}, time is running out... Book your appointment today.\nTBD",
-      "smsT5PK": "Get a new valuation for your car.Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments.\nTBD",
-      "smsT6PK": "Are you fed up trying to sell your car yet? Relax and chill out with a free chai and wifi in one of our centres, update your valuation now.\nTBD"
-    },
-    "Opportunity": {
-      "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "templateT1": "Opportunity Real Time Trigger1",
-      "templateT2": "Opportunity Real Time Trigger2",
-      "templateT3": "Opportunity Real Time Trigger3",
-      "templateT4": "Opportunity Real Time Trigger4",
-      "smsT1PK": "Missed appointment! With a new appointment, your payment is in your account within days.\nTBD",
-      "smsT2PK": "Still want cash for your car? You could have crashed your car 5 days ago and turned it into an investment.\nThis Opportunity is still there:\nWe are waiting for you at our purchase centre.\nTBD",
-      "smsT3PK": "Get a new valuation for your car.Avoid the risk and hassle of selling your car privately and visit us for a quick and transparent inspection.\nTBD",
-      "smsT4PK": "Are you fed up trying to sell your car yet? Relax and chill out with a free chai and wifi in one of our centres, update your valuation now.\nTBD"
-    },
-    "Prospect": {
-      "smsT1": "Yüzdün yüzdün kuyruğuna geldin. Aracınıza verdiğimiz teklif için son gün! Yarın gelin bir kahve içelim ve aracını zahmetsizce satın alalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT2": "5 gün oldu, özledik Hem özlem giderelim, hem kahve eşliğinde aracını alalım ve anında ödemeni yapalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "smsT3": "Kilometren git gide artıyor olmalı...Sattığını umuyoruz ama satmadıysan da biz alırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-      "templateT1": "Prospect Real Time Trigger1",
-      "templateT2": "Prospect Real Time Trigger2",
-      "templateT3": "Prospect Real Time Trigger3",
-      "smsT1PK": "You've come this far. One final step to selling your car.\nTBD",
-      "smsT2PK": "Still want cash for your car? Let's have a coffee and a chat while we do the rest.\nTBD",
-      "smsT3PK": "Sold your car yet? If not we're still here for you.\nTBD"
-    },
-    "Keys": {
-      "EncryptionkeyLead": "VHJpZ2dlclNlcnZpY2VBcGlMZWFk",
-      "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
-      "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA==",
-      "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw=="
-    },
-
-    "SmartMessageAPI": "https://api2.smartmessage-engage.com/SENDSMS",
-    "ERRORSMS": "<SENDSMSRSP><RTCD>0</RTCD><EXP>{Exception}></EXP><TOTALCOUNT>1</TOTALCOUNT><SUCCESSCOUNT>0</SUCCESSCOUNT><FAILEDCOUNT>1</FAILEDCOUNT></SENDSMSRSP>"
-  }
+  "Lead": {
+    "smsT2": "Merhaba {contactname}, {make} {model} aracınızın {valuation} TL değerlemesinin geçerlilik süresine 4 gün kaldı. {make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın? Ödemeniz anında hesabınıza yapılacaktır.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT5": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "templateT2": "Lead Real Time Trigger2",
+    "templateT3": "Lead Real Time Trigger3",
+    "templateT4": "Lead Real Time Trigger4",
+    "templateT5": "Lead Real Time Trigger5",
+    "templateT6": "Lead Real Time Trigger6",
+    "smsT2PK": "Hey {contactname}, 4 days left on your valuation of {valuation} PK for your {make}{model}. Our valuation for your {make} {model}.\nTBD",
+    "smsT3PK": "Hey {contactname}, how will you spend {valuation}? Money in your account in 3 working hours.\nTBD",
+    "smsT4PK": "Hey {contactname}, time is running out... Book your appointment today.\nTBD",
+    "smsT5PK": "Get a new valuation for your car.Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments.\nTBD",
+    "smsT6PK": "Are you fed up trying to sell your car yet? Relax and chill out with a free chai and wifi in one of our centres, update your valuation now.\nTBD"
+  },
+  "Opportunity": {
+    "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "templateT1": "Opportunity Real Time Trigger1",
+    "templateT2": "Opportunity Real Time Trigger2",
+    "templateT3": "Opportunity Real Time Trigger3",
+    "templateT4": "Opportunity Real Time Trigger4",
+    "smsT1PK": "Missed appointment! With a new appointment, your payment is in your account within days.\nTBD",
+    "smsT2PK": "Still want cash for your car? You could have crashed your car 5 days ago and turned it into an investment.\nThis Opportunity is still there:\nWe are waiting for you at our purchase centre.\nTBD",
+    "smsT3PK": "Get a new valuation for your car.Avoid the risk and hassle of selling your car privately and visit us for a quick and transparent inspection.\nTBD",
+    "smsT4PK": "Are you fed up trying to sell your car yet? Relax and chill out with a free chai and wifi in one of our centres, update your valuation now.\nTBD"
+  },
+  "Prospect": {
+    "smsT1": "Yüzdün yüzdün kuyruğuna geldin. Aracınıza verdiğimiz teklif için son gün! Yarın gelin bir kahve içelim ve aracını zahmetsizce satın alalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "5 gün oldu, özledik Hem özlem giderelim, hem kahve eşliğinde aracını alalım ve anında ödemeni yapalım.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Kilometren git gide artıyor olmalı...Sattığını umuyoruz ama satmadıysan da biz alırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "templateT1": "Prospect Real Time Trigger1",
+    "templateT2": "Prospect Real Time Trigger2",
+    "templateT3": "Prospect Real Time Trigger3",
+    "smsT1PK": "You've come this far. One final step to selling your car.\nTBD",
+    "smsT2PK": "Still want cash for your car? Let's have a coffee and a chat while we do the rest.\nTBD",
+    "smsT3PK": "Sold your car yet? If not we're still here for you.\nTBD"
+  },
+  "Keys": {
+    "EncryptionkeyLead": "VHJpZ2dlclNlcnZpY2VBcGlMZWFk",
+    "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
+    "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA==",
+    "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw==",
+    "EncryptionkeyLeadPK": "VHJpZ2dlclNlcnZpY2VBcGlMZWFkUEs=",
+    "EncryptionkeyOpportunityPK": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eVBL",
+    "EncryptionkeyProspectPK": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdFBL"
+  },
+  "BussinessUnitPK": "BD6D3F1A-1FB2-E911-A83A-000D3AB18325",
+  "BussinessUnitTR": "C4F62721-1FB2-E911-A83A-000D3AB18325",
+  "SmartMessageAPI": "https://api2.smartmessage-engage.com/SENDSMS",
+  "ERRORSMS": "<SENDSMSRSP><RTCD>0</RTCD><EXP>{Exception}></EXP><TOTALCOUNT>1</TOTALCOUNT><SUCCESSCOUNT>0</SUCCESSCOUNT><FAILEDCOUNT>1</FAILEDCOUNT></SENDSMSRSP>"
+}
