Incorporating Lead Template Names for PK & Adding Bussiness Unit CRM Queries

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -70,7 +70,8 @@
     "templateT4": "Lead Real Time Trigger4",
     "templateT5": "Lead Real Time Trigger5",
     "templateT6": "Lead Real Time Trigger6",
-    "smsT2PK": "Hey {contactname}, 4 days left on your valuation of {valuation} PK for your {make}{model}. Our valuation for your {make} {model}.\nTBD",
+    "templateT2PK": "Lead Real Time Trigger2_PK",
+    "smsT2PK": "Hey {contactname}, 4 days left on your valuation of {valuation} PK for your {make} {model}. Our valuation for your {make} {model}.\nTBD",
     "smsT3PK": "Hey {contactname}, how will you spend {valuation}? Money in your account in 3 working hours.\nTBD",
     "smsT4PK": "Hey {contactname}, time is running out... Book your appointment today.\nTBD",
     "smsT5PK": "Get a new valuation for your car.Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments.\nTBD",
