Addition of Opportunity Triggers for PK

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -86,6 +86,7 @@
     "templateT2": "Opportunity Real Time Trigger2",
     "templateT3": "Opportunity Real Time Trigger3",
     "templateT4": "Opportunity Real Time Trigger4",
+    "templateT1PK": "Opportunity Real Time Trigger1_PK",
     "smsT1PK": "Missed appointment! With a new appointment, your payment is in your account within days.\nTBD",
     "smsT2PK": "Still want cash for your car? You could have crashed your car 5 days ago and turned it into an investment.\nThis Opportunity is still there:\nWe are waiting for you at our purchase centre.\nTBD",
     "smsT3PK": "Get a new valuation for your car.Avoid the risk and hassle of selling your car privately and visit us for a quick and transparent inspection.\nTBD",
