--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -27,6 +27,7 @@
     "vehiclePurchaseStatusInTransit": "In Transit",
     //Start Comments
     // Need to Verify from the production
+    "appointmentStatusNoShow": "NoShow",
     "appointmentReasonType3": "I am unable to find the paperwork",
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
@@ -75,7 +76,7 @@
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     //Start Comments
     // Need to Update the latest content provided from client end
-    "smsT5": "Coming Soon",
+    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da\n{centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön\ndeğerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam\ndeğişebilir. Randevu değişikliği için, 0 216 275 3873 ‘den veya\ninfoturkey@vava.cars adresinden bize ulaşabilirsiniz.",
     //End Comments
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Real Time Trigger2",
