--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -78,7 +78,7 @@
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     //Start Comments
     // Need to Update the latest content provided from client end
-    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da\n{centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön\ndeğerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam\ndeğişebilir. Randevu değişikliği için, 0 216 275 3873 ‘den veya\ninfoturkey@vava.cars adresinden bize ulaşabilirsiniz.",
+    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize\nbekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası\nbu rakam değişebilir. Randevu değişikliği için, 0 216 275 3873 ‘den veya infoturkey@vava.cars\nadresinden bize ulaşabilirsiniz.",
     //End Comments
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Real Time Trigger2",
