--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -78,7 +78,7 @@
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     //Start Comments
     // Need to Update the latest content provided from client end
-    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam değişebilir.\nRandevu değişikliği için, 0 216 275 3877‘den veya infoturkey@vava.cars adresinden bize ulaşabilirsiniz.\nhttps://www.google.com/maps/place/{centeraddress}",
+    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam değişebilir.\nRandevu değişikliği için, 0 216 275 3877‘den veya infoturkey@vava.cars adresinden bize ulaşabilirsiniz.\nhttps://www.google.com/maps?q={centrelatitude},{centrelongitude}",
     //End Comments
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Real Time Trigger2",
