--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
+
+# User-specific files
 *.suo
 *.user
 *.userosscache
