New Changes to master

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -9,7 +9,7 @@
   "AzureCRM": {
 
     //---- Sandbox Environment -------
-
+    /*
     "clientId": "3ade8450-a12e-480e-810f-dd4af4744263",
     "clientSecret": "6jKNGwgppG@A0DB3xopIdxIm9jF??U?j",
     "resource": "https://vavacarssb.crm4.dynamics.com/",
@@ -32,10 +32,10 @@
     "appointmentReasonType8": "I was just checking what price you could offer",
     "appointmentReasonType9": "I will book an appointment later"
     //End Comments
+    */
 
 
 
-    /*
     //---- Production Environment -------
     "clientId": "56aa6ca6-77d3-4d91-8577-1ab124484037",
     "clientSecret": "QCAA4T:3aoRSCeIiCIpCVHEc9]rfV4+.",
@@ -51,8 +51,13 @@
     "inspectionStatusAgreementNotSigned": "Agreement Not Signed",
     "vehiclePurchaseStatusPurchased": "Purchased",
     "vehiclePurchaseStatusAuctionCreated": "Auction Created",
-    "vehiclePurchaseStatusInTransit": "In Transit"
-    */
+    "vehiclePurchaseStatusInTransit": "In Transit",
+    "appointmentStatusNoShow": "NoShow",
+    "appointmentReasonType3": "I am unable to find the paperwork",
+    "appointmentReasonType4": "I am no longer satisfied with the valuation",
+    "appointmentReasonType8": "I was just checking what price you could offer",
+    "appointmentReasonType9": "I will book an appointment later"
+
 
 
   },
@@ -70,15 +75,10 @@
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //"smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT2": "Aracınızı hala nakite çevirmeyi istemez miydiniz ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //"smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT3": "Aracınız için yeni bir değerleme alabilirsiniz. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //Start Comments
-    // Need to Update the latest content provided from client end
     "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam değişebilir.\nRandevu değişikliği için, 0 216 275 3877‘den veya infoturkey@vava.cars adresinden bize ulaşabilirsiniz.\nhttps://www.google.com/maps?q={centrelatitude},{centrelongitude}",
-    //End Comments
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Real Time Trigger2",
     "templateT3": "Opportunity Real Time Trigger3",
