Sms Content Formatting Changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -87,13 +87,13 @@
 
   },
   "Prospect": {
-    "smsT2": "Teklifimizi yeniden değerlendirebildiniz mi? Teklifimizi kabul etmeniz durumunda, aracınızı anında VavaCars'a satabilirsiniz.SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Sizi yeniden görebilmeyi umuyoruz.Aracınızı satmak için daha fazla vakit kaybetmenizi istemeyiz. Anında satın ve rahatınıza bakın.SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "Aracınız için verdiğimiz teklifimizin bugün son günü! Bugun aracınızı VavaCars'a satabilir ve anında paranızı hesabınızda görebilirsiniz.Son günü kaçırmayın! SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT6": "Son görüşmemizin üzerinden 7 gün geçti...Eğer aracınızı hala satamadıysanız size yeni bir randevu verebiliriz. Tek yapmanız gereken bizi bilgilendirmek.SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT8": "Kilometreniz git gide artıyor olmalı...Aracınızı satmış olduğunuzu umuyoruz ama satmadıysanız da biz almaya hazırız.SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT9": "Daha iyi bir teklif mi aldınız? Eğer hala daha iyi bir teklif almadıysanız, daha fazla vakit kaybetmeyin.VavaCars daima yanınızda. SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT10": "Size son verdiğimiz fiyatın üzerinden 45 gün geçti. Sizlere en iyi hizmeti verebilmek ve sizi bu zorlu süreçten kurtarmak isteriz. Bize ne zaman ihtiyaç duyarsanız her zaman bir tıkla ulaşabilirsiniz. VavaCars SMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Teklifimizi yeniden değerlendirebildiniz mi? Teklifimizi kabul etmeniz durumunda, aracınızı anında VavaCars'a satabilirsiniz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Sizi yeniden görebilmeyi umuyoruz. Aracınızı satmak için daha fazla vakit kaybetmenizi istemeyiz. Anında satın ve rahatınıza bakın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT5": "Aracınız için verdiğimiz teklifimizin bugün son günü! Bugun aracınızı VavaCars'a satabilir ve anında paranızı hesabınızda görebilirsiniz. Son günü kaçırmayın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT6": "Son görüşmemizin üzerinden 7 gün geçti...Eğer aracınızı hala satamadıysanız size yeni bir randevu verebiliriz. Tek yapmanız gereken bizi bilgilendirmek.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT8": "Kilometreniz git gide artıyor olmalı...Aracınızı satmış olduğunuzu umuyoruz ama satmadıysanız da biz almaya hazırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT9": "Daha iyi bir teklif mi aldınız? Eğer hala daha iyi bir teklif almadıysanız, daha fazla vakit kaybetmeyin.VavaCars daima yanınızda.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT10": "Size son verdiğimiz fiyatın üzerinden 45 gün geçti. Sizlere en iyi hizmeti verebilmek ve sizi bu zorlu süreçten kurtarmak isteriz. Bize ne zaman ihtiyaç duyarsanız her zaman bir tıkla ulaşabilirsiniz. VavaCars\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "templateT2": "Prospect Real Time Trigger2",
     "templateT4": "Prospect Real Time Trigger4",
     "templateT5": "Prospect Real Time Trigger5",
